xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__model_manager_loading_popup.snap
---
source: tui-chatwidget/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Loading Model Manager
  Reading provider settings and credentials.

›    Loading provider settings…

  Press enter to confirm or esc to go back
