xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__model_manager_root_popup.snap
---
source: tui-chatwidget/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Model Manager
  Manage provider credentials, defaults, instructions, and token limits.

› 1. OpenAI     smart: gpt-5.6-sol · fast: gpt-5.6-luna · auth: OAuth
  2. Anthropic  smart: claude-fable-5-1 · fast: claude-haiku-5-5 · auth: API key

  Press enter to confirm or esc to go back
