xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__model_manager_setting_api_key_popup.snap
---
source: tui-chatwidget/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 98
expression: "render_bottom_popup(&chat, 100)"
---
  Setting API key...
  Storing the key securely and refreshing provider settings.

›    Setting API key...

  Press enter to confirm or esc to go back
