xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__optimized_tool_summary_action_verb.snap
---
source: tui-chatwidget/src/chatwidget/tests/tool_summary.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"• Running printf action                                                         "
"                                                                                "
"  Calls: 1 · 0 succeeded · 0 failed · 1 in progress                             "
"                                                                                "
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Xedoc to do anything                                                    │"
"╰──────────────────────────────────────────────────────────── gpt-5.6-sol ─ 0s ╯"
"  gpt-5.6-sol default · /tmp/project                                            "
