xedoc-rs/tui-chatwidget/src/chatwidget/snapshots/xedoc_tui__chatwidget__tests__optimized_tool_summary_hidden_without_active_turn.snap
---
source: tui-chatwidget/src/chatwidget/tests/tool_summary.rs
expression: rendered
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ Ask Xedoc to do anything                                                    │"
"╰───────────────────────────────────────────────────────────────── gpt-5.6-sol ╯"
"  gpt-5.6-sol default · /tmp/project                                            "
